schemas/Home Insurance/v1.0.0/volcanoes.md
| Excel Column   | Field Name                                                                                                                                              | Sample Value        | Comment 1                  | Comment 2   | In Kaggle   |
|:---------------|:--------------------------------------------------------------------------------------------------------------------------------------------------------|:--------------------|:---------------------------|:------------|:------------|
| A              | Date                                                                                                                                                    | 2023-07-16 00:00:00 |                            |             | No          |
| B              | Volcano                                                                                                                                                 | Three Sisters       | Name of Volcano            |             | No          |
| C              | VEI                                                                                                                                                     | 4                   | Volcanic Explosivity Index |             | No          |
| D              | Latitude                                                                                                                                                | 44.1033             | West of Bend, Oregon       |             | No          |
| E              | Longitude                                                                                                                                               | -121.7692           |                            |             | No          |
| F              | Country                                                                                                                                                 | United States       |                            |             | No          |
|                |                                                                                                                                                         |                     |                            |             |             |
| NOTE:          | File has a list of all signficant and unexpected volcanic eruptions during transaction period where significant insurance losses may be incurred        |                     |                            |             |             |
|                | All eruptions are simulated -- but follow geographic and temporal likelihood of eruptions                                                               |                     |                            |             |             |
|                | There are 169 active volcanos in the United States.  It is very rare to have an unexpected eruption, and for most data sets there will be no eruptions. |                     |                            |             |             |
