schemas/Home Insurance/v1.1.0/volcanoes.md
| Excel Column   | Field Name                                                                                                                                              | Sample Value        | Comment 1                                | Comment 2                                                                                                                                                                                                                                                                                                                                                                                    | In Kaggle   |
|:---------------|:--------------------------------------------------------------------------------------------------------------------------------------------------------|:--------------------|:-----------------------------------------|:---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|:------------|
| A              | Eruption_Event_Index                                                                                                                                    | 2                   | Numbering [1, N] of N Volcanic Eruptions | Insurance claims refer to this number if the claim is associated with a volcanic eruption (and have 0 if the claim is not associated with an eruption).  Volcanic eruptions causing property damage are rare in the US, and most of the time there will be no volcanic eruptions listed.  (The site and frequency of any eruptions are modeled using historic and geographical information.) | No          |
| B              | Date                                                                                                                                                    | 2023-07-16 00:00:00 |                                          |                                                                                                                                                                                                                                                                                                                                                                                              | No          |
| C              | Volcano                                                                                                                                                 | Three Sisters       | Name of Volcano                          |                                                                                                                                                                                                                                                                                                                                                                                              | No          |
| D              | VEI                                                                                                                                                     | 4                   | Volcanic Explosivity Index               |                                                                                                                                                                                                                                                                                                                                                                                              | No          |
| E              | Latitude                                                                                                                                                | 44.1033             | West of Bend, Oregon                     |                                                                                                                                                                                                                                                                                                                                                                                              | No          |
| F              | Longitude                                                                                                                                               | -121.7692           |                                          |                                                                                                                                                                                                                                                                                                                                                                                              | No          |
| G              | Country                                                                                                                                                 | United States       |                                          |                                                                                                                                                                                                                                                                                                                                                                                              | No          |
|                |                                                                                                                                                         |                     |                                          |                                                                                                                                                                                                                                                                                                                                                                                              |             |
| NOTE:          | File has a list of all signficant and unexpected volcanic eruptions during transaction period where significant insurance losses may be incurred        |                     |                                          |                                                                                                                                                                                                                                                                                                                                                                                              |             |
|                | All eruptions are simulated -- but follow geographic and temporal likelihood of eruptions                                                               |                     |                                          |                                                                                                                                                                                                                                                                                                                                                                                              |             |
|                | There are 169 active volcanos in the United States.  It is very rare to have an unexpected eruption, and for most data sets there will be no eruptions. |                     |                                          |                                                                                                                                                                                                                                                                                                                                                                                              |             |
